parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start_program
Rule 1     start_program -> cuadruploMain PROGRAM ID SEMICOLON vars multiple_funcs main_body end
Rule 2     start_program -> cuadruploMain PROGRAM ID SEMICOLON vars main_body end
Rule 3     start_program -> cuadruploMain PROGRAM ID SEMICOLON multiple_funcs main_body end
Rule 4     start_program -> cuadruploMain PROGRAM ID SEMICOLON main_body end
Rule 5     cuadruploMain -> empty
Rule 6     multiple_funcs -> dec_func
Rule 7     multiple_funcs -> dec_func multiple_funcs
Rule 8     main_body -> MAIN crearTablaMain PARENOPEN PARENCLOSE gotoMain body
Rule 9     crearTablaMain -> empty
Rule 10    gotoMain -> empty
Rule 11    end -> empty
Rule 12    vars -> VAR varss
Rule 13    varss -> type guardarTipo mvar SEMICOLON varss
Rule 14    varss -> type guardarTipo mvar SEMICOLON
Rule 15    guardarTipo -> empty
Rule 16    mvar -> ID COLON mvar
Rule 17    mvar -> ID BRACEOPEN CTEINT BRACECLOSE COLON mvar
Rule 18    mvar -> ID BRACEOPEN CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE COLON mvar
Rule 19    mvar -> ID
Rule 20    mvar -> ID BRACEOPEN CTEINT BRACECLOSE
Rule 21    mvar -> ID BRACEOPEN CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE
Rule 22    dec_func -> FUNCTION type ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc
Rule 23    dec_func -> FUNCTION VOID ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc
Rule 24    crearSymbolTable -> empty
Rule 25    exitFunc -> empty
Rule 26    param -> typeParam ID
Rule 27    param -> typeParam ID COLON param
Rule 28    param -> empty
Rule 29    typeParam -> INT
Rule 30    typeParam -> FLOAT
Rule 31    typeParam -> CHAR
Rule 32    type -> INT
Rule 33    type -> FLOAT
Rule 34    type -> CHAR
Rule 35    body -> BRACKETOPEN bodyy BRACKETCLOSE
Rule 36    bodyy -> statement
Rule 37    bodyy -> statement bodyy
Rule 38    bodyy -> empty
Rule 39    statement -> dec_variables
Rule 40    statement -> assignment
Rule 41    statement -> condition
Rule 42    statement -> writing
Rule 43    statement -> reading
Rule 44    statement -> call_func
Rule 45    statement -> graph
Rule 46    statement -> return
Rule 47    statement -> while_loop
Rule 48    statement -> for_loop
Rule 49    statement -> max
Rule 50    statement -> min
Rule 51    statement -> sum
Rule 52    statement -> normal
Rule 53    statement -> uniforme
Rule 54    statement -> poisson
Rule 55    statement -> binomial
Rule 56    dec_variables -> dec_variabless
Rule 57    dec_variabless -> type guardarTipo dec_mvar SEMICOLON dec_variabless
Rule 58    dec_variabless -> type guardarTipo dec_mvar SEMICOLON
Rule 59    dec_mvar -> ID COLON dec_mvar
Rule 60    dec_mvar -> ID BRACEOPEN CTEINT BRACECLOSE COLON dec_mvar
Rule 61    dec_mvar -> ID BRACEOPEN CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE COLON dec_mvar
Rule 62    dec_mvar -> ID
Rule 63    dec_mvar -> ID BRACEOPEN CTEINT BRACECLOSE
Rule 64    dec_mvar -> ID BRACEOPEN CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE
Rule 65    assignment -> variableAssignment EQUAL exp SEMICOLON
Rule 66    call_func -> ID generarERA PARENOPEN call_funcc PARENCLOSE
Rule 67    generarERA -> empty
Rule 68    call_funcc -> exp mandarParam
Rule 69    call_funcc -> exp mandarParam COLON call_funcc
Rule 70    call_funcc -> empty
Rule 71    mandarParam -> empty
Rule 72    graph -> PLOT PARENOPEN exp PARENCLOSE SEMICOLON
Rule 73    exp -> expp
Rule 74    exp -> exp AND expp
Rule 75    exp -> exp OR expp
Rule 76    expp -> m_exp
Rule 77    expp -> expp GREATHERTHAN m_exp
Rule 78    expp -> expp LESSTHAN m_exp
Rule 79    expp -> expp GREATHEREQUAL m_exp
Rule 80    expp -> expp LESSEQUAL m_exp
Rule 81    expp -> expp DIFFERENT m_exp
Rule 82    expp -> expp SAME m_exp
Rule 83    m_exp -> termino
Rule 84    m_exp -> m_exp PLUS termino
Rule 85    m_exp -> m_exp MINUS termino
Rule 86    termino -> factor
Rule 87    termino -> termino MULTIPLY factor
Rule 88    termino -> termino DIVIDE factor
Rule 89    factor -> ID
Rule 90    factor -> CTEINT guardarConstanteInt
Rule 91    factor -> CTFLOAT guardarConstanteFloat
Rule 92    factor -> variable
Rule 93    factor -> call_func
Rule 94    factor -> PARENOPEN exp PARENCLOSE
Rule 95    guardarConstanteInt -> empty
Rule 96    guardarConstanteFloat -> empty
Rule 97    variable -> ID
Rule 98    variable -> ID BRACEOPEN exp BRACECLOSE
Rule 99    variable -> ID BRACEOPEN exp BRACECLOSE BRACEOPEN exp BRACECLOSE
Rule 100   variableAssignment -> ID
Rule 101   variableAssignment -> ID BRACEOPEN exp BRACECLOSE
Rule 102   variableAssignment -> ID BRACEOPEN exp BRACECLOSE BRACEOPEN exp BRACECLOSE
Rule 103   condition -> IF PARENOPEN exp PARENCLOSE cuadruploIF body ifEnd
Rule 104   condition -> IF PARENOPEN exp PARENCLOSE cuadruploIF body cuadruploElse ELSE body ifEndElse
Rule 105   cuadruploIF -> empty
Rule 106   ifEnd -> empty
Rule 107   cuadruploElse -> empty
Rule 108   ifEndElse -> empty
Rule 109   writing -> PRINT PARENOPEN writingg PARENCLOSE SEMICOLON
Rule 110   writingg -> exp
Rule 111   writingg -> exp COLON writingg
Rule 112   writingg -> auxString
Rule 113   writingg -> auxString COLON writingg
Rule 114   auxString -> CTESTRING
Rule 115   reading -> READ multivariables SEMICOLON
Rule 116   multivariables -> variable
Rule 117   multivariables -> variable COLON multivariables
Rule 118   while_loop -> WHILE whileMigaja PARENOPEN exp PARENCLOSE whileEval body whileEnd
Rule 119   whileMigaja -> empty
Rule 120   whileEval -> empty
Rule 121   whileEnd -> empty
Rule 122   for_loop -> FOR PARENOPEN ID EQUAL exp guardarValorFor TO exp PARENCLOSE body forEnd
Rule 123   guardarValorFor -> empty
Rule 124   forEnd -> empty
Rule 125   return -> RETURN exp SEMICOLON
Rule 126   max -> MAX PARENOPEN exp PARENCLOSE SEMICOLON
Rule 127   min -> MIN PARENOPEN exp PARENCLOSE SEMICOLON
Rule 128   sum -> SUM PARENOPEN exp PARENCLOSE SEMICOLON
Rule 129   param_dist -> variable
Rule 130   param_dist -> variable COLON param_dist
Rule 131   binomial -> BINOMIAL PARENOPEN param_dist PARENCLOSE SEMICOLON
Rule 132   poisson -> POISSON PARENOPEN param_dist PARENCLOSE SEMICOLON
Rule 133   uniforme -> UNIFORME PARENOPEN param_dist PARENCLOSE SEMICOLON
Rule 134   normal -> NORMAL PARENOPEN param_dist PARENCLOSE SEMICOLON
Rule 135   empty -> <empty>

Terminals, with rules where they appear

AND                  : 74
BINOMIAL             : 131
BRACECLOSE           : 17 18 18 20 21 21 60 61 61 63 64 64 98 99 99 101 102 102
BRACEOPEN            : 17 18 18 20 21 21 60 61 61 63 64 64 98 99 99 101 102 102
BRACKETCLOSE         : 35
BRACKETOPEN          : 35
CHAR                 : 31 34
COLON                : 16 17 18 27 59 60 61 69 111 113 117 130
CTEINT               : 17 18 18 20 21 21 60 61 61 63 64 64 90
CTESTRING            : 114
CTFLOAT              : 91
DIFFERENT            : 81
DIVIDE               : 88
ELSE                 : 104
EQUAL                : 65 122
FLOAT                : 30 33
FOR                  : 122
FUNCTION             : 22 23
GREATHEREQUAL        : 79
GREATHERTHAN         : 77
ID                   : 1 2 3 4 16 17 18 19 20 21 22 23 26 27 59 60 61 62 63 64 66 89 97 98 99 100 101 102 122
IF                   : 103 104
INT                  : 29 32
LESSEQUAL            : 80
LESSTHAN             : 78
MAIN                 : 8
MAX                  : 126
MIN                  : 127
MINUS                : 85
MULTIPLY             : 87
NORMAL               : 134
OR                   : 75
PARENCLOSE           : 8 22 23 66 72 94 103 104 109 118 122 126 127 128 131 132 133 134
PARENOPEN            : 8 22 23 66 72 94 103 104 109 118 122 126 127 128 131 132 133 134
PLOT                 : 72
PLUS                 : 84
POISSON              : 132
PRINT                : 109
PROGRAM              : 1 2 3 4
READ                 : 115
RETURN               : 125
SAME                 : 82
SEMICOLON            : 1 2 3 4 13 14 57 58 65 72 109 115 125 126 127 128 131 132 133 134
SUM                  : 128
TO                   : 122
UNIFORME             : 133
VAR                  : 12
VOID                 : 23
WHILE                : 118
error                : 

Nonterminals, with rules where they appear

assignment           : 40
auxString            : 112 113
binomial             : 55
body                 : 8 22 23 103 104 104 118 122
bodyy                : 35 37
call_func            : 44 93
call_funcc           : 66 69
condition            : 41
crearSymbolTable     : 22 23
crearTablaMain       : 8
cuadruploElse        : 104
cuadruploIF          : 103 104
cuadruploMain        : 1 2 3 4
dec_func             : 6 7
dec_mvar             : 57 58 59 60 61
dec_variables        : 39
dec_variabless       : 56 57
empty                : 5 9 10 11 15 24 25 28 38 67 70 71 95 96 105 106 107 108 119 120 121 123 124
end                  : 1 2 3 4
exitFunc             : 22 23
exp                  : 65 68 69 72 74 75 94 98 99 99 101 102 102 103 104 110 111 118 122 122 125 126 127 128
expp                 : 73 74 75 77 78 79 80 81 82
factor               : 86 87 88
forEnd               : 122
for_loop             : 48
generarERA           : 66
gotoMain             : 8
graph                : 45
guardarConstanteFloat : 91
guardarConstanteInt  : 90
guardarTipo          : 13 14 57 58
guardarValorFor      : 122
ifEnd                : 103
ifEndElse            : 104
m_exp                : 76 77 78 79 80 81 82 84 85
main_body            : 1 2 3 4
mandarParam          : 68 69
max                  : 49
min                  : 50
multiple_funcs       : 1 3 7
multivariables       : 115 117
mvar                 : 13 14 16 17 18
normal               : 52
param                : 22 23 27
param_dist           : 130 131 132 133 134
poisson              : 54
reading              : 43
return               : 46
start_program        : 0
statement            : 36 37
sum                  : 51
termino              : 83 84 85 87 88
type                 : 13 14 22 57 58
typeParam            : 26 27
uniforme             : 53
variable             : 92 116 117 129 130
variableAssignment   : 65
vars                 : 1 2
varss                : 12 13
whileEnd             : 118
whileEval            : 118
whileMigaja          : 118
while_loop           : 47
writing              : 42
writingg             : 109 111 113

Parsing method: LALR

state 0

    (0) S' -> . start_program
    (1) start_program -> . cuadruploMain PROGRAM ID SEMICOLON vars multiple_funcs main_body end
    (2) start_program -> . cuadruploMain PROGRAM ID SEMICOLON vars main_body end
    (3) start_program -> . cuadruploMain PROGRAM ID SEMICOLON multiple_funcs main_body end
    (4) start_program -> . cuadruploMain PROGRAM ID SEMICOLON main_body end
    (5) cuadruploMain -> . empty
    (135) empty -> .

    PROGRAM         reduce using rule 135 (empty -> .)

    start_program                  shift and go to state 1
    cuadruploMain                  shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> start_program .



state 2

    (1) start_program -> cuadruploMain . PROGRAM ID SEMICOLON vars multiple_funcs main_body end
    (2) start_program -> cuadruploMain . PROGRAM ID SEMICOLON vars main_body end
    (3) start_program -> cuadruploMain . PROGRAM ID SEMICOLON multiple_funcs main_body end
    (4) start_program -> cuadruploMain . PROGRAM ID SEMICOLON main_body end

    PROGRAM         shift and go to state 4


state 3

    (5) cuadruploMain -> empty .

    PROGRAM         reduce using rule 5 (cuadruploMain -> empty .)


state 4

    (1) start_program -> cuadruploMain PROGRAM . ID SEMICOLON vars multiple_funcs main_body end
    (2) start_program -> cuadruploMain PROGRAM . ID SEMICOLON vars main_body end
    (3) start_program -> cuadruploMain PROGRAM . ID SEMICOLON multiple_funcs main_body end
    (4) start_program -> cuadruploMain PROGRAM . ID SEMICOLON main_body end

    ID              shift and go to state 5


state 5

    (1) start_program -> cuadruploMain PROGRAM ID . SEMICOLON vars multiple_funcs main_body end
    (2) start_program -> cuadruploMain PROGRAM ID . SEMICOLON vars main_body end
    (3) start_program -> cuadruploMain PROGRAM ID . SEMICOLON multiple_funcs main_body end
    (4) start_program -> cuadruploMain PROGRAM ID . SEMICOLON main_body end

    SEMICOLON       shift and go to state 6


state 6

    (1) start_program -> cuadruploMain PROGRAM ID SEMICOLON . vars multiple_funcs main_body end
    (2) start_program -> cuadruploMain PROGRAM ID SEMICOLON . vars main_body end
    (3) start_program -> cuadruploMain PROGRAM ID SEMICOLON . multiple_funcs main_body end
    (4) start_program -> cuadruploMain PROGRAM ID SEMICOLON . main_body end
    (12) vars -> . VAR varss
    (6) multiple_funcs -> . dec_func
    (7) multiple_funcs -> . dec_func multiple_funcs
    (8) main_body -> . MAIN crearTablaMain PARENOPEN PARENCLOSE gotoMain body
    (22) dec_func -> . FUNCTION type ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc
    (23) dec_func -> . FUNCTION VOID ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc

    VAR             shift and go to state 10
    MAIN            shift and go to state 12
    FUNCTION        shift and go to state 13

    vars                           shift and go to state 7
    multiple_funcs                 shift and go to state 8
    main_body                      shift and go to state 9
    dec_func                       shift and go to state 11

state 7

    (1) start_program -> cuadruploMain PROGRAM ID SEMICOLON vars . multiple_funcs main_body end
    (2) start_program -> cuadruploMain PROGRAM ID SEMICOLON vars . main_body end
    (6) multiple_funcs -> . dec_func
    (7) multiple_funcs -> . dec_func multiple_funcs
    (8) main_body -> . MAIN crearTablaMain PARENOPEN PARENCLOSE gotoMain body
    (22) dec_func -> . FUNCTION type ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc
    (23) dec_func -> . FUNCTION VOID ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc

    MAIN            shift and go to state 12
    FUNCTION        shift and go to state 13

    multiple_funcs                 shift and go to state 14
    main_body                      shift and go to state 15
    dec_func                       shift and go to state 11

state 8

    (3) start_program -> cuadruploMain PROGRAM ID SEMICOLON multiple_funcs . main_body end
    (8) main_body -> . MAIN crearTablaMain PARENOPEN PARENCLOSE gotoMain body

    MAIN            shift and go to state 12

    main_body                      shift and go to state 16

state 9

    (4) start_program -> cuadruploMain PROGRAM ID SEMICOLON main_body . end
    (11) end -> . empty
    (135) empty -> .

    $end            reduce using rule 135 (empty -> .)

    end                            shift and go to state 17
    empty                          shift and go to state 18

state 10

    (12) vars -> VAR . varss
    (13) varss -> . type guardarTipo mvar SEMICOLON varss
    (14) varss -> . type guardarTipo mvar SEMICOLON
    (32) type -> . INT
    (33) type -> . FLOAT
    (34) type -> . CHAR

    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23

    varss                          shift and go to state 19
    type                           shift and go to state 20

state 11

    (6) multiple_funcs -> dec_func .
    (7) multiple_funcs -> dec_func . multiple_funcs
    (6) multiple_funcs -> . dec_func
    (7) multiple_funcs -> . dec_func multiple_funcs
    (22) dec_func -> . FUNCTION type ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc
    (23) dec_func -> . FUNCTION VOID ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc

    MAIN            reduce using rule 6 (multiple_funcs -> dec_func .)
    FUNCTION        shift and go to state 13

    dec_func                       shift and go to state 11
    multiple_funcs                 shift and go to state 24

state 12

    (8) main_body -> MAIN . crearTablaMain PARENOPEN PARENCLOSE gotoMain body
    (9) crearTablaMain -> . empty
    (135) empty -> .

    PARENOPEN       reduce using rule 135 (empty -> .)

    crearTablaMain                 shift and go to state 25
    empty                          shift and go to state 26

state 13

    (22) dec_func -> FUNCTION . type ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc
    (23) dec_func -> FUNCTION . VOID ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc
    (32) type -> . INT
    (33) type -> . FLOAT
    (34) type -> . CHAR

    VOID            shift and go to state 28
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23

    type                           shift and go to state 27

state 14

    (1) start_program -> cuadruploMain PROGRAM ID SEMICOLON vars multiple_funcs . main_body end
    (8) main_body -> . MAIN crearTablaMain PARENOPEN PARENCLOSE gotoMain body

    MAIN            shift and go to state 12

    main_body                      shift and go to state 29

state 15

    (2) start_program -> cuadruploMain PROGRAM ID SEMICOLON vars main_body . end
    (11) end -> . empty
    (135) empty -> .

    $end            reduce using rule 135 (empty -> .)

    end                            shift and go to state 30
    empty                          shift and go to state 18

state 16

    (3) start_program -> cuadruploMain PROGRAM ID SEMICOLON multiple_funcs main_body . end
    (11) end -> . empty
    (135) empty -> .

    $end            reduce using rule 135 (empty -> .)

    end                            shift and go to state 31
    empty                          shift and go to state 18

state 17

    (4) start_program -> cuadruploMain PROGRAM ID SEMICOLON main_body end .

    $end            reduce using rule 4 (start_program -> cuadruploMain PROGRAM ID SEMICOLON main_body end .)


state 18

    (11) end -> empty .

    $end            reduce using rule 11 (end -> empty .)


state 19

    (12) vars -> VAR varss .

    MAIN            reduce using rule 12 (vars -> VAR varss .)
    FUNCTION        reduce using rule 12 (vars -> VAR varss .)


state 20

    (13) varss -> type . guardarTipo mvar SEMICOLON varss
    (14) varss -> type . guardarTipo mvar SEMICOLON
    (15) guardarTipo -> . empty
    (135) empty -> .

    ID              reduce using rule 135 (empty -> .)

    guardarTipo                    shift and go to state 32
    empty                          shift and go to state 33

state 21

    (32) type -> INT .

    ID              reduce using rule 32 (type -> INT .)


state 22

    (33) type -> FLOAT .

    ID              reduce using rule 33 (type -> FLOAT .)


state 23

    (34) type -> CHAR .

    ID              reduce using rule 34 (type -> CHAR .)


state 24

    (7) multiple_funcs -> dec_func multiple_funcs .

    MAIN            reduce using rule 7 (multiple_funcs -> dec_func multiple_funcs .)


state 25

    (8) main_body -> MAIN crearTablaMain . PARENOPEN PARENCLOSE gotoMain body

    PARENOPEN       shift and go to state 34


state 26

    (9) crearTablaMain -> empty .

    PARENOPEN       reduce using rule 9 (crearTablaMain -> empty .)


state 27

    (22) dec_func -> FUNCTION type . ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc

    ID              shift and go to state 35


state 28

    (23) dec_func -> FUNCTION VOID . ID crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc

    ID              shift and go to state 36


state 29

    (1) start_program -> cuadruploMain PROGRAM ID SEMICOLON vars multiple_funcs main_body . end
    (11) end -> . empty
    (135) empty -> .

    $end            reduce using rule 135 (empty -> .)

    end                            shift and go to state 37
    empty                          shift and go to state 18

state 30

    (2) start_program -> cuadruploMain PROGRAM ID SEMICOLON vars main_body end .

    $end            reduce using rule 2 (start_program -> cuadruploMain PROGRAM ID SEMICOLON vars main_body end .)


state 31

    (3) start_program -> cuadruploMain PROGRAM ID SEMICOLON multiple_funcs main_body end .

    $end            reduce using rule 3 (start_program -> cuadruploMain PROGRAM ID SEMICOLON multiple_funcs main_body end .)


state 32

    (13) varss -> type guardarTipo . mvar SEMICOLON varss
    (14) varss -> type guardarTipo . mvar SEMICOLON
    (16) mvar -> . ID COLON mvar
    (17) mvar -> . ID BRACEOPEN CTEINT BRACECLOSE COLON mvar
    (18) mvar -> . ID BRACEOPEN CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE COLON mvar
    (19) mvar -> . ID
    (20) mvar -> . ID BRACEOPEN CTEINT BRACECLOSE
    (21) mvar -> . ID BRACEOPEN CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE

    ID              shift and go to state 39

    mvar                           shift and go to state 38

state 33

    (15) guardarTipo -> empty .

    ID              reduce using rule 15 (guardarTipo -> empty .)


state 34

    (8) main_body -> MAIN crearTablaMain PARENOPEN . PARENCLOSE gotoMain body

    PARENCLOSE      shift and go to state 40


state 35

    (22) dec_func -> FUNCTION type ID . crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc
    (24) crearSymbolTable -> . empty
    (135) empty -> .

    PARENOPEN       reduce using rule 135 (empty -> .)

    crearSymbolTable               shift and go to state 41
    empty                          shift and go to state 42

state 36

    (23) dec_func -> FUNCTION VOID ID . crearSymbolTable PARENOPEN param PARENCLOSE body exitFunc
    (24) crearSymbolTable -> . empty
    (135) empty -> .

    PARENOPEN       reduce using rule 135 (empty -> .)

    crearSymbolTable               shift and go to state 43
    empty                          shift and go to state 42

state 37

    (1) start_program -> cuadruploMain PROGRAM ID SEMICOLON vars multiple_funcs main_body end .

    $end            reduce using rule 1 (start_program -> cuadruploMain PROGRAM ID SEMICOLON vars multiple_funcs main_body end .)


state 38

    (13) varss -> type guardarTipo mvar . SEMICOLON varss
    (14) varss -> type guardarTipo mvar . SEMICOLON

    SEMICOLON       shift and go to state 44


state 39

    (16) mvar -> ID . COLON mvar
    (17) mvar -> ID . BRACEOPEN CTEINT BRACECLOSE COLON mvar
    (18) mvar -> ID . BRACEOPEN CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE COLON mvar
    (19) mvar -> ID .
    (20) mvar -> ID . BRACEOPEN CTEINT BRACECLOSE
    (21) mvar -> ID . BRACEOPEN CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE

    COLON           shift and go to state 45
    BRACEOPEN       shift and go to state 46
    SEMICOLON       reduce using rule 19 (mvar -> ID .)


state 40

    (8) main_body -> MAIN crearTablaMain PARENOPEN PARENCLOSE . gotoMain body
    (10) gotoMain -> . empty
    (135) empty -> .

    BRACKETOPEN     reduce using rule 135 (empty -> .)

    gotoMain                       shift and go to state 47
    empty                          shift and go to state 48

state 41

    (22) dec_func -> FUNCTION type ID crearSymbolTable . PARENOPEN param PARENCLOSE body exitFunc

    PARENOPEN       shift and go to state 49


state 42

    (24) crearSymbolTable -> empty .

    PARENOPEN       reduce using rule 24 (crearSymbolTable -> empty .)


state 43

    (23) dec_func -> FUNCTION VOID ID crearSymbolTable . PARENOPEN param PARENCLOSE body exitFunc

    PARENOPEN       shift and go to state 50


state 44

    (13) varss -> type guardarTipo mvar SEMICOLON . varss
    (14) varss -> type guardarTipo mvar SEMICOLON .
    (13) varss -> . type guardarTipo mvar SEMICOLON varss
    (14) varss -> . type guardarTipo mvar SEMICOLON
    (32) type -> . INT
    (33) type -> . FLOAT
    (34) type -> . CHAR

    MAIN            reduce using rule 14 (varss -> type guardarTipo mvar SEMICOLON .)
    FUNCTION        reduce using rule 14 (varss -> type guardarTipo mvar SEMICOLON .)
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23

    type                           shift and go to state 20
    varss                          shift and go to state 51

state 45

    (16) mvar -> ID COLON . mvar
    (16) mvar -> . ID COLON mvar
    (17) mvar -> . ID BRACEOPEN CTEINT BRACECLOSE COLON mvar
    (18) mvar -> . ID BRACEOPEN CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE COLON mvar
    (19) mvar -> . ID
    (20) mvar -> . ID BRACEOPEN CTEINT BRACECLOSE
    (21) mvar -> . ID BRACEOPEN CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE

    ID              shift and go to state 39

    mvar                           shift and go to state 52

state 46

    (17) mvar -> ID BRACEOPEN . CTEINT BRACECLOSE COLON mvar
    (18) mvar -> ID BRACEOPEN . CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE COLON mvar
    (20) mvar -> ID BRACEOPEN . CTEINT BRACECLOSE
    (21) mvar -> ID BRACEOPEN . CTEINT BRACECLOSE BRACEOPEN CTEINT BRACECLOSE

    CTEINT          shift and go to state 53


state 47

    (8) main_body -> MAIN crearTablaMain PARENOPEN PARENCLOSE gotoMain . body
    (35) body -> . BRACKETOPEN bodyy BRACKETCLOSE

    BRACKETOPEN     shift and go to state 55

    body                           shift and go to state 54

state 48

    (10) gotoMain -> empty .

    BRACKETOPEN     reduce using rule 10 (gotoMain -> empty .)


state 49

    (22) dec_func -> FUNCTION type ID crearSymbolTable PARENOPEN . param PARENCLOSE body exitFunc
    (26) param -> . typeParam ID
    (27) param -> . typeParam ID COLON param
    (28) param -> . empty
    (29) typeParam -> . INT
    (30) typeParam -> . FLOAT
    (31) typeParam -> . CHAR
    (135) empty -> .

    INT             shift and go to state 59
    FLOAT           shift and go to state 60
    CHAR            shift and go to state 61
    PARENCLOSE      reduce using rule 135 (empty -> .)

    param                          shift and go to state 56
    typeParam                      shift and go to state 57
    empty                          shift and go to state 58

state 50

    (23) dec_func -> FUNCTION VOID ID crearSymbolTable PARENOPEN . param PARENCLOSE body exitFunc
    (26) param -> . typeParam ID
    (27) param -> . typeParam ID COLON param
    (28) param -> . empty
    (29) typeParam -> . INT
    (30) typeParam -> . FLOAT
    (31) typeParam -> . CHAR
    (135) empty -> .

    INT             shift and go to state 59
    FLOAT           shift and go to state 60
    CHAR            shift and go to state 61
    PARENCLOSE      reduce using rule 135 (empty -> .)

    param                          shift and go to state 62
    typeParam                      shift and go to state 57
    empty                          shift and go to state 58

state 51

    (13) varss -> type guardarTipo mvar SEMICOLON varss .

    MAIN            reduce using rule 13 (varss -> type guardarTipo mvar SEMICOLON varss .)
    FUNCTION        reduce using rule 13 (varss -> type guardarTipo mvar SEMICOLON varss .)


state 52

    (16) mvar -> ID COLON mvar .

    SEMICOLON       reduce using rule 16 (mvar -> ID COLON mvar .)


state 53

    (17) mvar -> ID BRACEOPEN CTEINT . BRACECLOSE COLON mvar
    (18) mvar -> ID BRACEOPEN CTEINT . BRACECLOSE BRACEOPEN CTEINT BRACECLOSE COLON mvar
    (20) mvar -> ID BRACEOPEN CTEINT . BRACECLOSE
    (21) mvar -> ID BRACEOPEN CTEINT . BRACECLOSE BRACEOPEN CTEINT BRACECLOSE

    BRACECLOSE      shift and go to state 63


state 54

    (8) main_body -> MAIN crearTablaMain PARENOPEN PARENCLOSE gotoMain body .

    $end            reduce using rule 8 (main_body -> MAIN crearTablaMain PARENOPEN PARENCLOSE gotoMain body .)


state 55

    (35) body -> BRACKETOPEN . bodyy BRACKETCLOSE
    (36) bodyy -> . statement
    (37) bodyy -> . statement bodyy
    (38) bodyy -> . empty
    (39) statement -> . dec_variables
    (40) statement -> . assignment
    (41) statement -> . condition
    (42) statement -> . writing
    (43) statement -> . reading
    (44) statement -> . call_func
    (45) statement -> . graph
    (46) statement -> . return
    (47) statement -> . while_loop
    (48) statement -> . for_loop
    (49) statement -> . max
    (50) statement -> . min
    (51) statement -> . sum
    (52) statement -> . normal
    (53) statement -> . uniforme
    (54) statement -> . poisson
    (55) statement -> . binomial
    (135) empty -> .
    (56) dec_variables -> . dec_variabless
    (65) assignment -> . variableAssignment EQUAL exp SEMICOLON
    (103) condition -> . IF PARENOPEN exp PARENCLOSE cuadruploIF body ifEnd
    (104) condition -> . IF PARENOPEN exp PARENCLOSE cuadruploIF body cuadruploElse ELSE body ifEndElse
    (109) writing -> . PRINT PARENOPEN writingg PARENCLOSE SEMICOLON
    (115) reading -> . READ multivariables SEMICOLON
    (66) call_func -> . ID generarERA PARENOPEN call_funcc PARENCLOSE
    (72) graph -> . PLOT PARENOPEN exp PARENCLOSE SEMICOLON
    (125) return -> . RETURN exp SEMICOLON
    (118) while_loop -> . WHILE whileMigaja PARENOPEN exp PARENCLOSE whileEval body whileEnd
    (122) for_loop -> . FOR PARENOPEN ID EQUAL exp guardarValorFor TO exp PARENCLOSE body forEnd
    (126) max -> . MAX PARENOPEN exp PARENCLOSE SEMICOLON
    (127) min -> . MIN PARENOPEN exp PARENCLOSE SEMICOLON
    (128) sum -> . SUM PARENOPEN exp PARENCLOSE SEMICOLON
    (134) normal -> . NORMAL PARENOPEN param_dist PARENCLOSE SEMICOLON
    (133) uniforme -> . UNIFORME PARENOPEN param_dist PARENCLOSE SEMICOLON
    (132) poisson -> . POISSON PARENOPEN param_dist PARENCLOSE SEMICOLON
    (131) binomial -> . BINOMIAL PARENOPEN param_dist PARENCLOSE SEMICOLON
    (57) dec_variabless -> . type guardarTipo dec_mvar SEMICOLON dec_variabless
    (58) dec_variabless -> . type guardarTipo dec_mvar SEMICOLON
    (100) variableAssignment -> . ID
    (101) variableAssignment -> . ID BRACEOPEN exp BRACECLOSE
    (102) variableAssignment -> . ID BRACEOPEN exp BRACECLOSE BRACEOPEN exp BRACECLOSE
    (32) type -> . INT
    (33) type -> . FLOAT
    (34) type -> . CHAR

    BRACKETCLOSE    reduce using rule 135 (empty -> .)
    IF              shift and go to state 86
    PRINT           shift and go to state 87
    READ            shift and go to state 88
    ID              shift and go to state 89
    PLOT            shift and go to state 90
    RETURN          shift and go to state 91
    WHILE           shift and go to state 92
    FOR             shift and go to state 93
    MAX             shift and go to state 94
    MIN             shift and go to state 95
    SUM             shift and go to state 96
    NORMAL          shift and go to state 97
    UNIFORME        shift and go to state 98
    POISSON         shift and go to state 99
    BINOMIAL        shift and go to state 100
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
